--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.20'
 
     - name: Build
-      run: go build src/main.go
+      run: go build -o d8b src/main.go
 
     - name: Test
       run: go test src/main.go
