adding Makefile and fixing workflow

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,11 +21,6 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Build
-      run: go build -o d8b src/main.go
+    - name: Make
+      run: make
 
-    - name: Move executable to source
-      run: cp d8b ./
-
-    - name: Test
-      run: go test src/main.go
