--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,8 +18,10 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Install golangci-lint
-      run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.57.2
+    - name: Install golangci-lint and gotestsum
+      run: |
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.57.2
+        go install gotest.tools/gotestsum@latest
 
     - name: Make
       run: make
