--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,11 +18,13 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Install golangci-lint and gotestsum
+    - name: Install dependencies
       run: |
         curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.57.2
         go install gotest.tools/gotestsum@latest
 
-    - name: Make
-      run: make
+    - name: Lint
+      run: golangci-lint run ./...
 
+    - name: Test
+      run: gotestsum ./...
