--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
 
 on:
@@ -21,6 +18,13 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Make
-      run: make
+    - name: Install dependencies
+      run: |
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.57.2
+        go install gotest.tools/gotestsum@latest
 
+    - name: Lint
+      run: golangci-lint run ./...
+
+    - name: Test
+      run: gotestsum ./...
